k8sdc-grafana/templates/k8sdc-grafana-dp.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8sdc-grafana
  namespace: k8sdc-system
  labels:
    app: k8sdc-grafana
    heritage: k8sdc
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: k8sdc-grafana
  strategy: {'type': 'RollingUpdate'}
  template:
    metadata:
      name: k8sdc-grafana
      labels:
        app: k8sdc-grafana
    spec:
      containers:
      - name: k8sdc-grafana
        image: grafana/grafana:3.0.4
        ports:
          - name: http
            containerPort: 3000
            protocol: TCP
        volumeMounts:
          - name: k8sdc-grafana
            mountPath: /var/lib/grafana/
          - name: k8sdc-grafana-configmap
            mountPath: /etc/grafana/
        resources:
          limits:
            cpu: 1000m
            memory: 1000Mi
          requests:
            cpu: 800m
            memory: 800Mi
        # livenessProbe:
        #   httpGet:
        #     host: 127.0.0.1
        #     path: /
        #     port: 2368
        #     httpHeaders:
        #     - name: User-Agent
        #       value: kubernetes
        #   initialDelaySeconds: 60
        #   timeoutSeconds: 1
      volumes:
        - name: k8sdc-grafana
          rbd:
            monitors:
              - 192.168.1.211
              - 192.168.1.213
              - 192.168.1.215
            pool: k8sdc-system
            image: k8sdc-grafana
            user: admin
            secretRef:
              name: ceph-secret
            keyring: /etc/ceph/ceph.client.admin.keyring
            fsType: ext4
            readOnly: false
        - name: k8sdc-grafana-configmap
          configMap:
            name: k8sdc-grafana
