k8sdc-grafana/templates/k8sdc-grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sdc-grafana
  namespace: k8sdc-system
  labels:
    app: k8sdc-grafana
    heritage: k8sdc
spec:
  selector:
    app: k8sdc-grafana
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
